--- a/index.html
+++ b/index.html
@@ -2,4 +2,14 @@
 <html lang=" pt br"
  
 </head> 
-<meta charset=" UTF-8" >
+     <meta charset=" UTF-8" >
+     <meta name=" viewport" content=" width= device-width,initial-scale=1.0">
+     <title>flash cards turma C</title
+     < link rel="<stylesheet" href="assets/style>css">
+</head>
+
+<body>
+    <main>
+        <section id="container">
+            <!--primeira pergurta-->
+            <article class="cartao">
