--- a/index.html
+++ b/index.html
@@ -12,4 +12,7 @@
     <main>
         <section id="container">
             <!--primeira pergurta-->
-            <article class="cartao">
+            <article class="cartão">
+                <div class="cartão_conteudo">
+                    <h3>programação</h3>
+                    <div class="cartão_conteudo"_pergunta">
