--- a/index.html
+++ b/index.html
@@ -12,7 +12,16 @@
     <main>
         <section id="container">
             <!--primeira pergurta-->
-            <article class="cartão">
-                <div class="cartão_conteudo">
+            <article class="cartao">
+                <div class="cartao_conteudo">
                     <h3>programação</h3>
-                    <div class="cartão_conteudo"_pergunta">
+                    <div class="cartao_conteudo"_pergunta">
+                        <p>o que é HMTL?</p>
+                    </div>
+                    <div class="cartao_conteudo_pergunta">
+                        <p>o HTML é uma linguagem de marcação</p>
+                    </div>
+                </div>
+            </article>
+                 <!--segunda pergunta-->
+                 <article class="
