--- a/index.html
+++ b/index.html
@@ -24,4 +24,16 @@
                 </div>
             </article>
                  <!--segunda pergunta-->
-                 <article class="
+                 <article class="cartao">
+                     <div class="cartao_conteudo">
+                         <h3>filosofia</h3>
+                         <div class="cartao_conteudo_pergunta">
+                             <p>o que é o renascimento?</p>
+                          </div>
+                          <div class="cartao_conteudo_pergunta">
+                              <p>período culturam da história europeia,retomanda as influência da Antiguidade
+                                  à produção cultural a Idade Média.</p>
+                            </div>
+                     </div>
+                 </article>
+                 <!--terceira pergunta-->
